--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -448,7 +448,6 @@
                     second_player: game.second.name,
                     first_score: game.first.score,
                     second_score: game.second.score,
-                    point_match: game.point_match,
                     is_long_game: game.is_long_game
                 }));
                 const gameInfo = gamesArray[0]
@@ -1288,6 +1287,7 @@
             current = 0;
             inverted = false;
             const matchInfoDiv = document.getElementById('match-info');
+            const matchText = availableGames.point_match === 0 ? 'Манигейм' : `Матч до ${availableGames.point_match}`;
             matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>${matchText}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
             drawBoard();
             updateButtons();
