--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -448,6 +448,7 @@
                     second_player: game.second.name,
                     first_score: game.first.score,
                     second_score: game.second.score,
+                    point_match: game.point_match,
                     is_long_game: game.is_long_game
                 }));
                 const gameInfo = gamesArray[0]
