--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -473,6 +473,8 @@
 
         const canvas = document.getElementById('boardCanvas');
         const ctx = canvas.getContext('2d');
+        const matchInfoDiv = document.getElementById('match-info');
+        const playersInfoDiv = document.getElementById('players-info');
 
         // Load images
         const boardImg = new Image();
