--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1258,6 +1258,7 @@
             const originalInvertDisplay = invertBtn ? invertBtn.style.display : 'none';
             const originalHideInfoCheckboxDisplay = hideInfoCheckbox ? hideInfoCheckbox.style.display : 'none';
             const originalPlayersInfoDisplay = playersInfoDiv ? playersInfoDiv.style.display : 'none';
+            const originalPlayersInfoHTML = playersInfoDiv ? playersInfoDiv.innerHTML : '';
             const originalMatchInfoHTML = matchInfoDiv ? matchInfoDiv.innerHTML : '';
 
             controls.style.display = 'none';
@@ -1362,6 +1363,7 @@
             const originalInvertDisplay = invertBtn ? invertBtn.style.display : 'none';
             const originalHideInfoCheckboxDisplay = hideInfoCheckbox ? hideInfoCheckbox.style.display : 'none';
             const originalPlayersInfoDisplay = playersInfoDiv ? playersInfoDiv.style.display : 'none';
+            const originalPlayersInfoHTML = playersInfoDiv ? playersInfoDiv.innerHTML : '';
             const originalMatchInfoHTML = matchInfoDiv ? matchInfoDiv.innerHTML : '';
 
             controls.style.display = 'none';
