--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1274,8 +1274,8 @@
                     playersInfoDiv.style.display = 'none';
                 }
                 if (matchInfoDiv) {
-                    if (matchLength > 0) {
-                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
+                    if (matchPoint > 0) {
+                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchPoint}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
                     } else {
                         matchInfoDiv.innerHTML = 'Манигейм';
                     }
@@ -1383,8 +1383,8 @@
                     playersInfoDiv.style.display = 'none';
                 }
                 if (matchInfoDiv) {
-                    if (matchLength > 0) {
-                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
+                    if (matchPoint > 0) {
+                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchPoint}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
                     } else {
                         matchInfoDiv.innerHTML = 'Манигейм';
                     }
